# windows-rust-record

./: Cargo.toml  README.md
src/: display.rs  lib.rs  windows_screen_capture.rs
